--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -1,12 +1,27 @@
-/* grid */
-.content
-    margin-left auto
-    margin-right auto
-    max-width 768px
+/* center */
 
 .text-center
     text-align center
 
+.margin-center
+    margin-left auto
+    margin-right auto
+
+.full-width
+    width 100%
+
+/* bar */
+header, footer
+    width 100%
+    height 48px
+
+header
+    opacity .95
+
+/* grid */
+.container
+    max-width 960px
+    margin-top 48px
 
 /* color */
 
