--- a/app/front/app/search/views/home/templates/home.hbs
+++ b/app/front/app/search/views/home/templates/home.hbs
@@ -1,7 +1,3 @@
-<div class="header bg-black" fx="staytop"></div>
-<div class="pure-g-r content container">
-    <header class="pure-u-1">
-        <h1>title</h1>
-    </header>
-</div>
-<div id="footer"></div>
+<header class="bg-black"></header>
+<div class="pure-g-r container margin-center"></div>
+<footer></footer>
