--- a/app/front/app/search/views/index/templates/index.hbs
+++ b/app/front/app/search/views/index/templates/index.hbs
@@ -1,2 +1,2 @@
 <section class="search margin-center"></section>
-<section class="word-cloud"></section>
+<section class="search-display"></section>
