--- a/app/front/app/search/views/index/templates/search.hbs
+++ b/app/front/app/search/views/index/templates/search.hbs
@@ -1,2 +1,2 @@
-<input id="search_input" type="text" />
-<button type="button">搜索</button>
+<input id="search_input" class="pure-input-rounded" type="text" />
+<button class="pure-button" type="button">搜索</button>
