--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -14,9 +14,11 @@
 header, footer
     width 100%
     height 48px
-
-header
     opacity .95
+
+footer
+    position absolute
+    bottom 0
 
 /* grid */
 .container
