--- a/app/front/app/search/views/home/templates/home.hbs
+++ b/app/front/app/search/views/home/templates/home.hbs
@@ -1,3 +1,3 @@
 <header class="bg-black"></header>
 <div class="pure-g-r container margin-center"></div>
-<footer></footer>
+<footer class="bg-black"></footer>
