--- a/app/front/app/search/views/index/templates/search.hbs
+++ b/app/front/app/search/views/index/templates/search.hbs
@@ -1,4 +1,4 @@
 <form class="pure-form" method="get" action="/!/search">
-  <input id="search_input" class="pure-input-rounded" type="text" />
+  <input id="search_input" name='word' class="pure-input-rounded" type="text" />
   <button class="pure-button" type="submit">搜索</button>
 </form>
