第三页面样式

--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -13,23 +13,35 @@
 .p-relative
     position relative
 
-/* bar */
+/* container */
+
+body
+    font-family: 'Lato', Calibri, Arial, sans-serif;
+
 header, footer
     width 100%
     height 48px
     opacity .95
 
+header
+    position fixed
+    top 0
+
 footer
-    position absolute
+    position fixed
     bottom 0
+
+ul
+    list-style none
 
 /* grid */
 .container
     max-width 960px
-    margin-top 48px
+    margin-top 96px
 
 /* color */
 
+/* bg */
 .bg-black
     background-color #000
 
@@ -41,3 +53,107 @@ footer
 
 .bg-white-pink
     background-color #FCF
+
+.bg-m-blue, .bg-1
+    background-color #39C
+
+.bg-1-1
+    background-color #2D87B4
+
+.bg-1-2
+    background-color #297AA3
+
+.bg-1-3
+    background-color #256E93
+
+.bg-1-4
+    background-color #216283
+
+.bg-1-5
+    background-color #1D5672
+
+.bg-1-6
+    background-color #184962
+
+.bg-1-7
+    background-color #143D52
+
+.bg-l-blue, .bg-2
+    background-color #3CC
+
+.bg-purple, .bg-3
+    background-color #969
+
+.bg-dark-red, .bg-4
+    background-color #C24747
+
+.bg-dark-orange, .bg-5
+    background-color #e2674a
+
+.bg-dark-yellow, .bg-6
+    background-color #FC6
+
+.bg-l-green, .bg-7
+    background-color #9C9
+
+.bg-blue-gray, .bg-8
+    background-color #699
+
+.bg-pink-gray, .bg-9
+    background-color #C69
+
+.bg-green-gray, .bg-10
+    background-color #396
+
+.bg-purple-gray, .bg-11
+    background-color #669
+
+/* fg */
+
+.fg-black
+    color #000
+
+.fg-orange
+    color #F60
+
+.fg-pink
+    color #F09
+
+.fg-white
+    color #FFF
+
+.fg-white-pink
+    color #FCF
+
+.fg-m-blue, .fg-1
+    color #39C
+
+.fg-l-blue, .fg-2
+    color #3CC
+
+.fg-purple, .fg-3
+    color #969
+
+.fg-dark-red, .fg-4
+    color #C24747
+
+.fg-dark-orange, .fg-5
+    color #e2674a
+
+.fg-dark-yellow, .fg-6
+    color #FC6
+
+.fg-l-green, .fg-7
+    color #9C9
+
+.fg-blue-gray, .fg-8
+    color #699
+
+.fg-pink-gray, .fg-9
+    color #C69
+
+.fg-green-gray, .fg-10
+    color #396
+
+.fg-purple-gray, .fg-11
+    color #669
