add style stack 2

--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -81,6 +81,28 @@ ul
 .bg-l-blue, .bg-2
     background-color #3CC
 
+.bg-2-1
+    background-color #2DB4B4
+
+.bg-2-2
+    background-color #29A3A3
+
+.bg-2-3
+    background-color #259393
+
+.bg-2-4
+    background-color #218383
+
+.bg-2-5
+    background-color #1D7272
+
+.bg-2-6
+    background-color #186262
+
+.bg-2-7
+    background-color #145252
+
+
 .bg-purple, .bg-3
     background-color #969
 
