add style stacks

--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -102,33 +102,221 @@ ul
 .bg-2-7
     background-color #145252
 
-
 .bg-purple, .bg-3
     background-color #969
+
+.bg-3-1
+    background-color #936293
+
+.bg-3-2
+    background-color #875A87
+
+.bg-3-3
+    background-color #7A527A
+
+.bg-3-4
+    background-color #6E496E
+
+.bg-3-5
+    background-color #624162
+
+.bg-3-6
+    background-color #563956
+
+.bg-3-7
+    background-color #493149
 
 .bg-dark-red, .bg-4
     background-color #C24747
 
+.bg-4-1
+    background-color #B83D3D
+
+.bg-4-2
+    background-color #A83838
+
+.bg-4-3
+    background-color #993333
+
+.bg-4-4
+    background-color #8A2E2E
+
+.bg-4-5
+    background-color #7A2929
+
+.bg-4-6
+    background-color #6B2424
+
+.bg-4-7
+    background-color #5C1F1F
+
 .bg-dark-orange, .bg-5
     background-color #e2674a
+
+.bg-5-1
+    background-color #E05C3E
+
+.bg-5-2
+    background-color #DD4D2C
+
+.bg-5-3
+    background-color #D34322
+
+.bg-5-4
+    background-color #C13D1F
+
+.bg-5-5
+    background-color #AF371D
+
+.bg-5-6
+    background-color #9E321A
+
+.bg-5-7
+    background-color #8C2C17
 
 .bg-dark-yellow, .bg-6
     background-color #FC6
 
+.bg-6-1
+    background-color #FFC247
+
+.bg-6-2
+    background-color #FFBB33
+
+.bg-6-3
+    background-color #FFB41F
+
+.bg-6-4
+    background-color #FFAD0A
+
+.bg-6-5
+    background-color #F5A300
+
+.bg-6-6
+    background-color #E09600
+
+.bg-6-7
+    background-color #CC8800
+
 .bg-l-green, .bg-7
     background-color #9C9
+
+.bg-7-1
+    background-color #85C185
+
+.bg-7-2
+    background-color #77BB77
+
+.bg-7-3
+    background-color #6AB46A
+
+.bg-7-4
+    background-color #5CAD5C
+
+.bg-7-5
+    background-color #52A352
+
+.bg-7-6
+    background-color #4B954B
+
+.bg-7-7
+    background-color #448844
 
 .bg-blue-gray, .bg-8
     background-color #699
 
+.bg-8-1
+    background-color #629393
+
+.bg-8-2
+    background-color #5A8787
+
+.bg-8-3
+    background-color #527A7A
+
+.bg-8-4
+    background-color #496E6E
+
+.bg-8-5
+    background-color #416262
+
+.bg-8-6
+    background-color #395656
+
+.bg-8-7
+    background-color #314949
+
 .bg-pink-gray, .bg-9
     background-color #C69
+
+.bg-9-1
+    background-color #C7578F
+
+.bg-9-2
+    background-color #C24785
+
+.bg-9-3
+    background-color #B83D7A
+
+.bg-9-4
+    background-color #A83870
+
+.bg-9-5
+    background-color #993366
+
+.bg-9-6
+    background-color #8A2E5C
+
+.bg-9-7
+    background-color #7A2952
 
 .bg-green-gray, .bg-10
     background-color #396
 
+.bg-10-1
+    background-color #2E8A5C
+
+.bg-10-2
+    background-color #297A52
+
+.bg-10-3
+    background-color #246B47
+
+.bg-10-4
+    background-color #1F5C3D
+
+.bg-10-5
+    background-color #194D33
+
+.bg-10-6
+    background-color #143D29
+
+.bg-10-7
+    background-color #0F2E1F
+
 .bg-purple-gray, .bg-11
     background-color #669
+
+.bg-11-1
+    background-color #626293
+
+.bg-11-2
+    background-color #5A5A87
+
+.bg-11-3
+    background-color #52527A
+
+.bg-11-4
+    background-color #49496E
+
+.bg-11-5
+    background-color #414162
+
+.bg-11-6
+    background-color #393956
+
+.bg-11-7
+    background-color #313149
 
 /* fg */
 
