--- a/app/front/app/search/views/search/templates/word-item.hbs
+++ b/app/front/app/search/views/search/templates/word-item.hbs
@@ -8,7 +8,7 @@
   <div class="rb-overlay">
     <span class="rb-close"></span>
     <div class="rb-detail text-center">
-      <div class="search-word"><span class="word">{{word}}<span></div>
+      <div class="search-word"><div class="word">{{word}}</div></div>
       <div class="search-word-trans">
       </div>
     </div>
