--- a/app/front/app/search/views/search/styl/word.styl
+++ b/app/front/app/search/views/search/styl/word.styl
@@ -55,12 +55,8 @@
   width 100%
   height 100%
 
-.rb-detail div
+.rb-detail > div
   float left
-
-.rb-detail span
-  display  block
-  margin auto 0
 
 .rb-detail .search-word
   font-size 40px
@@ -79,3 +75,24 @@
 .rb-detail .search-word-trans .trans-word
   height 14.2857142856%
   opacity 1
+
+.rb-detail .search-word-trans .trans-word span
+    font-size 24px
+
+.rb-detail .search-word-trans .trans-word ul
+    height 100%
+    width 100%
+
+.rb-detail .search-word-trans .trans-word ul li
+    display inline-block
+    maring 1% .5%
+    width 49%
+
+.rb-detail .search-word-trans .trans-word ul li a
+    display block
+    text-decoration none
+    color #FFF
+    font-size 16px
+
+.rb-detail .search-word-trans .trans-word ul li a:hover
+    font-size 14px
