--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -34,6 +34,13 @@ footer
 ul
     list-style none
 
+ul li
+    display inline-block
+
+ul li a
+    display block
+    text-decoration none
+
 /* grid */
 .container
     max-width 960px
