--- a/app/front/app/search/views/common/styles/header.styl
+++ b/app/front/app/search/views/common/styles/header.styl
@@ -1,4 +1,9 @@
-.header
+header
     opacity .95
-    padding 1em 0
-    width 100%
+
+header ul
+    margin 0 0
+
+header ul li a
+    color #fff
+    line-height 3em
