--- a/app/front/app/search/views/common/templates/header.hbs
+++ b/app/front/app/search/views/common/templates/header.hbs
@@ -1,22 +1,3 @@
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
-header
+<ul>
+  <li><a href="/">TechDict</a></li>
+</ul>
