--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -46,6 +46,15 @@ ul li a
     max-width 960px
     margin-top 96px
 
+/* animate */
+
+.show
+    opacity 1
+
+.hide
+    opacity 0
+
+
 /* color */
 
 /* bg */
