--- a/app/front/app/search/views/home/templates/home.hbs
+++ b/app/front/app/search/views/home/templates/home.hbs
@@ -1,3 +1,4 @@
 <header class="bg-black"></header>
 <div class="pure-g-r container margin-center"></div>
+<div class="loading margin-center show"><img src="/images/loading-bubbles.svg" alt="loading"/></div>
 <footer class="bg-black"></footer>
