update search result list

--- a/app/front/app/search/views/index/styles/search.styl
+++ b/app/front/app/search/views/index/styles/search.styl
@@ -1,5 +1,9 @@
-.search
-    width 400px
+.search-form input,
+.search-form button,
+#search_input
+    border-radius 0
+    float left
 
 .word-cloud
     margin-top 64px
+
