--- a/app/front/app/search/views/search/styl/word.styl
+++ b/app/front/app/search/views/search/styl/word.styl
@@ -3,15 +3,27 @@
   cursor pointer
   float left
   height 120px
-  margin .5%
+  margin 0.5% .3%
   position relative
-  width 24%
+  width 32%
+  border-width .2em
+  border-style solid
 
 .search-word-item h3
   opacity 0.8
 
 .search-word-item span
   opacity 0.6
+
+ul.list
+    display block
+
+ul.subject-list
+    display block
+
+ul.subject-list li
+    margin-right .3em
+    margin-top .3em
 
 .rb-overlay {
   opacity: 0;
