--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -22,6 +22,7 @@ header, footer
     width 100%
     height 48px
     opacity .95
+    z-index 100
 
 header
     position fixed
@@ -383,3 +384,50 @@ ul li a
 
 .fg-purple-gray, .fg-11
     color #669
+
+/* border-color */
+.bd-m-blue, .bd-1
+    border-color #39C
+
+.bd-l-blue, .bd-2
+    border-color #3CC
+
+.bd-purple, .bd-3
+    border-color #969
+
+.bd-dark-red, .bd-4
+    border-color #C24747
+
+.bd-dark-orange, .bd-5
+    border-color #e2674a
+
+.bd-dark-yellow, .bd-6
+    border-color #FC6
+
+.bd-l-green, .bd-7
+    border-color #9C9
+
+.bd-blue-gray, .bd-8
+    border-color #699
+
+.bd-pink-gray, .bd-9
+    border-color #C69
+
+.bd-green-gray, .bd-10
+    border-color #396
+
+.bd-purple-gray, .bd-11
+    border-color #669
+
+/* button */
+.button-xsmall
+    font-size 70%
+
+.button-small
+    font-size 85%
+
+.button-large
+    font-size 110
+
+.button-xlarge
+    font-size 125%
