--- a/app/front/app/search/views/index/templates/index.hbs
+++ b/app/front/app/search/views/index/templates/index.hbs
@@ -1,2 +1,2 @@
-<section class="search margin-center"></section>
+<section class="search text-center"></section>
 <section class="search-display"></section>
