--- a/app/front/app/search/views/index/templates/search.hbs
+++ b/app/front/app/search/views/index/templates/search.hbs
@@ -1,4 +1,5 @@
 <form class="search-form pure-form pure-u-1-2" method="get" action="/!/search">
-  <input id="search_input" name='word' class="pure-input pure-u-1-2" type="text" />
+  <input id="search_input" class="pure-input pure-u-1-2"
+    name='word' type="text" value="{{search_word}}"/>
   <button class="pure-button pure-button-primary pure-u-1-6" type="submit">搜索</button>
 </form>
