--- a/app/front/app/search/views/search/templates/word-item.hbs
+++ b/app/front/app/search/views/search/templates/word-item.hbs
@@ -3,7 +3,7 @@
     {{word}}
   </h3>
   <span>
-    {{#each trans}}{{word}}{{/each}}
+    {{trans.[0].word}}
   </span>
   <div class="rb-overlay">
     <span class="rb-close"></span>
