--- a/app/front/app/search/views/common/styles/header.styl
+++ b/app/front/app/search/views/common/styles/header.styl
@@ -3,8 +3,12 @@ header
 
 header ul
     margin 0 0
+    padding 0 40px
 
 header ul li a
     color #fff
     line-height 48px
+    font-size 16px
+
+header ul li:first-child  a
     font-size 24px
