添加无结果提示

--- a/app/front/app/search/views/search/styl/word.styl
+++ b/app/front/app/search/views/search/styl/word.styl
@@ -15,6 +15,15 @@
 .search-word-item span
   opacity 0.6
 
+.subject-list
+  position relative
+
+.subject-list .no-result
+  font-size 40px
+  color #d9534f
+  position absolute
+  top 120px
+
 ul.list
     display block
 
@@ -106,3 +115,4 @@ ul.subject-list li
 
 .rb-detail .search-word-trans .trans-word ul li a:hover
     font-size 14px
+
