调整显示界面

--- a/app/front/app/common/views/styles/application.styl
+++ b/app/front/app/common/views/styles/application.styl
@@ -3,12 +3,18 @@
 .text-center
     text-align center
 
+.text-left
+    text-align left
+
 .margin-center
     margin-left auto
     margin-right auto
 
 .full-width
     width 100%
+
+.full-height
+    height 100%
 
 .p-relative
     position relative
@@ -61,6 +67,8 @@ ul li a
 .hide
     opacity 0
 
+.display-hide
+  display none
 
 /* color */
 
