--- a/app/front/app/search/views/search/styl/word.styl
+++ b/app/front/app/search/views/search/styl/word.styl
@@ -88,6 +88,10 @@ ul.subject-list li
 .rb-detail .search-word .word
   height 100%
   padding 50% 0
+  cursor pointer
+
+.rb-detail .search-word .word:hover
+  opacity .5
 
 .rb-detail .search-word-trans
   width 70%
@@ -96,23 +100,33 @@ ul.subject-list li
 .rb-detail .search-word-trans .trans-word
   height 14.2857142856%
   opacity 1
+  position relative
+
+.rb-detail .search-word-trans .trans-word.full-height
+  height 100%
 
 .rb-detail .search-word-trans .trans-word span
-    font-size 24px
+  position relative
+  font-size 24px
+  top 30%
+  cursor pointer
+
+.rb-detail .search-word-trans .trans-word span:hover
+  opacity 1
 
 .rb-detail .search-word-trans .trans-word ul
     height 100%
     width 100%
 
 .rb-detail .search-word-trans .trans-word ul li
-    display inline-block
-    maring 1% .5%
-    width 49%
+    display block
+    margin 2% 0
+    width 100%
 
 .rb-detail .search-word-trans .trans-word ul li a
     color #FFF
     font-size 16px
+    opacity 1
 
 .rb-detail .search-word-trans .trans-word ul li a:hover
-    font-size 14px
-
+    opacity .5
